# bn_manager

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-tw.md  docker-compose.yml  settings.toml  settings_sample.toml
i18n/: en-US.ftl  ko.ftl  zh-CN.ftl  zh-TW.ftl
migrations/: 20250305182701_create_users_table.sql
sql/: mmr_tables.sql
src/: database.rs  main.rs  settings.rs
src/bot/: bot.rs  commands.rs  handler.rs  interactions.rs  mod.rs  query.rs  response_code.rs
src/handler/: map.rs  match_history.rs  mod.rs  room.rs  score.rs  user.rs
src/i18n/: i18n.rs  mod.rs
src/model/: game.rs  map.rs  match_history.rs  mod.rs  pagination.rs  room.rs  score.rs  user.rs
src/routes/: root.rs
src/telnet/: client.rs
src/util/: file.rs
src/worker/: mmr.rs
static/: index.html  map.html  match_history.html  score_board.html  signup.html
