[package]
name = "bn_manager"
version = "0.1.2"
edition = "2021"
authors = ["Fatorin"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors", "limit"] }
axum = { version = "0.8.1", features = ["multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
pvpgn-hash-rs = "1.0.0"
rand = "0.9.0"
once_cell = "1.19.0"
toml = "0.8.14"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
regex = "1.11.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
fluent = "0.16.1"
fluent-bundle = "0.15.3"