[package]
name = "bn_manager"
version = "0.3.5"
edition = "2021"
authors = ["Fatorin"]
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors", "limit"] }
axum = { version = "0.8.8", features = ["multipart"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
pvpgn-hash-rs = "1.0.0"
rand = "0.10.0"
once_cell = "1.19.0"
toml = "1.1.0"
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
regex = "1.11.1"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite", "mysql", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
fluent-bundle = "0.16.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.40"